# vid2cc-AI

./: .gitignore  README.md  Vid2CC_AI.ipynb  ffmpeg_installation.md  formatter.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/vid2cc_ai/: __init__.py  audio.py  cli.py  formatter.py  requirements.txt  transcriber.py
src/vid2cc_ai/tests/: test_formatter.py
